--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       body {
         margin: 0;
-        color: white;
+        background-color: rgb(89, 89, 114);
       }
       form {
         margin: 0 auto;
