added font weight

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       body {
         margin: 0;
         background-color: rgb(89, 89, 114);
+        font-weight: 100px;
       }
       form {
         margin: 0 auto;
@@ -91,7 +92,7 @@
 
         <p>
           Don't have an account?<a
-            href="java.html"
+            href="index.html"
             target="blank"
             class="account"
           >
