--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <label
           >password:<input
             type="text"
-            name="password"
+            name="Password"
             id="password"
             placeholder="Enter password"
         /></label>
