--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             placeholder="User id or gmail"
         /></label>
         <label
-          >password:<input
+          >Password:<input
             type="text"
             name="Password"
             id="password"
